--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.21.0",
+    "react-leaflet-markercluster": "^4.21.0",
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
